--- a/index.html
+++ b/index.html
@@ -1,38 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Work Day Scheduler</title>
-  </head>
 
-  <body>
-    <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
-    </header>
-    <div class="container">
-      <!-- Timeblocks go here -->
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="./Assets/css/style.css" />
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
+  <title>Work Day Scheduler</title>
+</head>
+
+<body>
+  <header class="jumbotron">
+    <h1 class="display-3">Work Day Scheduler</h1>
+    <p class="lead">A simple calendar app for scheduling your work day</p>
+    <p id="clock"></p>
+  </header>
+  <div class="container">
+    <!-- Timeblocks go here -->
+    <div class="container time-block">
+        <div class="input-group" id="time-9">
+          <div class="input-group-prepend">
+            <span class="input-group-text">9 AM</span>
+          </div>
+          <textarea class="saveArea form-control" id="9" userInput="09" aria-label="With textarea"></textarea>
+          <button class="btn saveBtn col-md-1" type="button" id="button-addon2"><i class="fas fa-archive"></i></button>
+        </div>
+        <div class="input-group" id="time-10">
+          <div class="input-group-prepend">
+            <span class="input-group-text timeTime">10AM</span>
+          </div>
+          <textarea class="saveArea form-control" id="10" userInput="10" aria-label="With textarea"></textarea>
+          <button class="btn saveBtn col-md-1" type="button" id="button-addon2"><i class="fas fa-archive"></i></button>
+        </div>
+        <div class="input-group" id="time-11">
+          <div class="input-group-prepend">
+            <span class="input-group-text">11AM</span>
+          </div>
+          <textarea class="saveArea form-control" id="11" userInput="11" aria-label="With textarea"></textarea>
+          <button class="btn saveBtn col-md-1" type="button" id="button-addon2"><i class="fas fa-archive"></i></button>
+        </div>
+        <div class="input-group" id="time-12">
+          <div class="input-group-prepend">
+            <span class="input-group-text">12PM</span>
+          </div>
+          <textarea class="saveArea form-control" id="12" userInput="12" aria-label="With textarea"></textarea>
+          <button class="btn saveBtn col-md-1" type="button" id="button-addon2"><i class="fas fa-archive"></i></button>
+        </div>
+        <div class="input-group" id="time-1PM">
+          <div class="input-group-prepend">
+            <span class="input-group-text">1 PM</span>
+          </div>
+          <textarea class="saveArea form-control" id="13" userInput="13" aria-label="With textarea"></textarea>
+          <button class="btn saveBtn col-md-1" type="button" id="button-addon2"><i class="fas fa-archive"></i></button>
+        </div>
+        <div class="input-group" id="time-2PM">
+          <div class="input-group-prepend">
+            <span class="input-group-text">2 PM</span>
+          </div>
+          <textarea class="saveArea form-control" id="14" userInput="14" aria-label="With textarea"></textarea>
+          <button class="btn saveBtn col-md-1" type="button" id="button-addon2"><i class="fas fa-archive"></i></button>
+        </div>
+        <div class="input-group" id="time-3PM">
+          <div class="input-group-prepend">
+            <span class="input-group-text">3 PM</span>
+          </div>
+          <textarea class="saveArea form-control" id="15" userInput="15" aria-label="With textarea"></textarea>
+          <button class="btn saveBtn col-md-1" type="button" id="button-addon2"><i class="fas fa-archive"></i></button>
+        </div>
+        <div class="input-group" id="time-4PM">
+          <div class="input-group-prepend">
+            <span class="input-group-text">4 PM</span>
+          </div>
+          <textarea class="saveArea form-control" id="16" userInput="16" aria-label="With textarea"></textarea>
+          <button class="btn saveBtn col-md-1" type="button" id="button-addon2"><i class="fas fa-archive"></i></button>
+        </div>
+        <div class="input-group" id="time-5PM">
+          <div class="input-group-prepend">
+            <span class="input-group-text">5 PM</span>
+          </div>
+          <textarea class="saveArea form-control" id="17" userInput="17" aria-label="With textarea"></textarea>
+          <button class="btn saveBtn col-md-1" type="button" id="button-addon2"><i class="fas fa-archive"></i></button>
+        </div>
+
     </div>
+  </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-  </body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="./Assets/js/script.js"></script>
+</body>
+
 </html>
